--- a/views/account_vocher_view.xml
+++ b/views/account_vocher_view.xml
@@ -26,8 +26,13 @@ For Module Support : devintelle@gmail.com  or Skype : devintelle
             <xpath expr="//field[@name='ref']" position="after">
                 <field name="cheque_formate_id" />
                 <field name="partner_text"/>
-                <field name="cheque_no"/>
-                <field name="text_free" />
+            </xpath>
+
+            <xpath expr="//field[@name='partner_bank_id']" position="after">                
+                <!-- <field name="cheque_no" attrs="{'required':[(payment_method_code[0:2],'=','CSH')]}" /> -->
+                <field name="cheque_no" required="1" />
+                <field name="text_free" required="1" />
+                
             </xpath>
         </field>
     </record>
